--- a/CSharpFundamentals/06_RepositoryPattern_Console/06_RepositoryPattern_Console.csproj
+++ b/CSharpFundamentals/06_RepositoryPattern_Console/06_RepositoryPattern_Console.csproj
@@ -44,10 +44,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\06_RepositoryPattern_Repository\06_RepositoryPattern_Repository.csproj">
+      <Project>{78356acb-e609-43c8-9ff2-5865bab075b0}</Project>
+      <Name>06_RepositoryPattern_Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
